gitlab/ingress.yaml
# Source: gitlab/charts/minio/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-minio
  namespace: default
  labels:
    app: minio
    chart: minio-0.4.3
    release: gitlab
    heritage: Helm
    
  annotations:
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/custom-response-headers: "X-Frame-Options:DENY||Access‐Control‐Allow‐Origin:minio.ithub.space"
spec:
  rules:
    - host: minio.ithub.space
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-minio-svc
              servicePort: 9000
  tls:
    - hosts:
      - minio.ithub.space
      secretName: gitlab-minio-tls
---
# Source: gitlab/charts/registry/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-registry
  namespace: default
  labels:
    app: registry
    chart: registry-0.4.0
    release: gitlab
    heritage: Helm
    
  annotations:
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/custom-response-headers: "server:Custom"
spec:
  rules:
    - host: registry.ithub.space
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-registry
              servicePort: 5000
  tls:
    - hosts:
      - registry.ithub.space
      secretName: gitlab-registry-tls
